fixed burger menu overflow

--- a/helpmehelpyou/src/Components/BurgerMenu/burgerMenu.css
+++ b/helpmehelpyou/src/Components/BurgerMenu/burgerMenu.css
@@ -104,7 +104,7 @@
 
 .navigation-menu ul {
   display: flex;
-  width: fit-content;
+  width: 100px;
   /* width: auto; */
   padding: 0;
   color: #fefefe;
@@ -173,7 +173,7 @@
     top: 60px;
     right: 0;
     flex-direction: column;
-    width: 20%;
+    width: 100px;
     background-color: #ffffff;
   }
   .navigation-menu li {
